--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "bundle": "webpack --watch",
-    "build": "browserify  js/index -o js/bundle -t [ babelify --presets [ es2015 react ] ]",
+    "build": "browserify  js/index -o js/bundle.min.js -t [ babelify --presets [ es2015 ] ]",
+    "watch": "watchify  js/index -o js/bundle.min.js -t [ babelify --presets [ es2015 ] ]",
     "knex": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "devDependencies": {
@@ -13,13 +14,11 @@
     "babel-plugin-transform-class-properties": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
-    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "browserify": "^13.0.0"
@@ -32,11 +31,8 @@
     "knex": "^0.10.0",
     "mandrill": "^0.1.0",
     "node-mandrill": "^1.0.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.0",
-    "react-router-redux": "^4.0.4",
-    "superagent": "^1.8.3"
+    "sqlite3": "^3.1.4",
+    "superagent": "^1.8.3",
+    "watchify": "^3.7.0"
   }
 }
